chore(env): add dotenv deps

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "cross-env NODE_ENV=test jest --config .jest.js",
     "compile": "node antd-tools/cli/run.js compile",
     "pub": "node antd-tools/cli/run.js pub",
+    "tag": "node antd-tools/cli/run.js tag",
     "pub-with-ci": "node antd-tools/cli/run.js pub-with-ci",
     "pre-publish": "node ./scripts/prepub",
     "prettier": "prettier -c --write '**/*'",
@@ -58,9 +59,9 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-object-rest-spread": "^7.9.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-object-assign": "^7.8.3",
+    "@babel/plugin-transform-object-rest-spread": "^7.9.6",
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.9.6",
     "@commitlint/cli": "^8.0.0",
@@ -175,6 +176,7 @@
     "dom-align": "^1.10.4",
     "dom-closest": "^0.2.0",
     "dom-scroll-into-view": "^2.0.0",
+    "dotenv": "^16.4.5",
     "enquire.js": "^2.1.6",
     "intersperse": "^1.0.0",
     "is-mobile": "^2.2.1",
